repair some `link jump error` bugs

--- a/src/assets/css/_reset.scss
+++ b/src/assets/css/_reset.scss
@@ -23,7 +23,7 @@ body{
 html,
 body,
 *{
-    box-sizing: border-box;   
+    box-sizing: border-box;
 }
 p{
     font-size: 16px;
@@ -32,7 +32,9 @@ p{
     margin-bottom: 1.6rem;
 
 }
-
+hr{
+    border-color: #FFFFFF;
+}
 h1,
 h2,
 h3,
